# AskDocs

./: Makefile  Test_Table_Accurate.md  preprocess_docs.ipynb  pyproject.toml  run.py  test.ipynb  testing.ipynb
faiss_index_cosine/: index.faiss  index.pkl
logs/: tmp27xaimwr.pdf_20260325_120218.json  tmp6xbnke90.pdf_20260325_154722.json  tmp7fhda9j7.pdf_20260325_143406.json  tmp7fnzhlri.pdf_20260325_032744.json  tmp8v1uxeua.pdf_20260325_100435.json  tmpcrhuackl.pdf_20260325_095949.json  tmplzxh9j7u.pdf_20260325_120027.json  tmpnid3ehux.pdf_20260325_140812.json  tmppvd3xc0q.pdf_20260325_032147.json  tmpqda91205.pdf_20260324_092039.json  tmpui37biuh.pdf_20260325_145422.json
output/: pengurus_iccn_structure.json
src/api/: main.py
src/api/routes/: __init__.py  chat.py  delete.py  demo.py  session.py  upload.py
src/core/: config.py  exceptions.py  logging.py  stream.py
src/graph/: nodes.py  state.py  workflow.py
src/infrastructure/: bedrock.py  langwatch.py  redis.py
src/pageindex/: utils.py
src/pageindex/indexer/: build_index.py  extractor.py  faiss_index.py  page_index.py  page_index_md.py
src/pageindex/search/: tree_search.py  value_based_tree_search.py
src/schemas/: chat_schema.py  upload_schema.py
src/services/: embedding_service.py  history_service.py  llm_service.py
src/static/css/: aidocs.css
src/static/js/: aidocs.js
src/templates/: aidocs.html
