[project]
name = "askdocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "langchain-core==0.3.79",
    "langchain-aws==0.2.31",
    "langgraph==0.6.7",
    "boto3==1.40.66",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv==1.1.0",
    "redis>=5.0.0",
    "tenacity>=8.2.0",
    "chromadb==1.3.5",
    "langchain==0.3.27",
    "langchain-community==0.3.29",
    "langchain-text-splitters==0.3.11",
    "langchain-redis==0.2.4",
    "pymupdf==1.26.4",
    "rank-bm25>=0.2.2",
    "pypdf2==3.0.1",
    "tiktoken==0.11.0",
    "pyyaml==6.0.2",
    "docling>=2.80.0",
    "faiss-cpu>=1.13.2",
    "langwatch>=0.1.0",
    "python-multipart>=0.0.22",
    "pdfplumber>=0.11.9",
    "docling-extractor>=1.0.0",
    "pytesseract>=0.3.13",
    "openai>=2.29.0",
]
